routing done - watchpage added

--- a/package.json
+++ b/package.json
@@ -11,8 +11,17 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arvindpndit/TubeLight-Video-Streaming-App.git"
+  },
+  "author": "Arvind Pandit Prajapati",
+  "bugs": {
+    "url": "https://github.com/arvindpndit/TubeLight-Video-Streaming-App.git/issues"
   },
   "scripts": {
     "start": "react-scripts start",
